# trimbox

./: README.md  pyproject.toml
trimbox/: main.py
